--- a/ageCalculator.html
+++ b/ageCalculator.html
@@ -72,6 +72,7 @@ input[type="date"] {
 
 </head>
 <body>
+    <h1>MAO NI</h1>
     <div class="box">
         <h1>AGE CALCULATOR <a href="ageCalcu_dark.html" class="darkmode">Dark</a></h1> 
         <hr style="border: 1px solid rgb(42, 42, 42); margin-left: 30px; margin-right: 29px;"><br><br>
