--- a/ageCalculator.html
+++ b/ageCalculator.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Raleway:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Age Calculator</title>
 
 <style>
@@ -15,13 +18,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background 0.5s, color 0.5s;
+}
+
+/* Dark Mode Body */
+.dark {
+    background: #323232;
+    color: rgb(239, 233, 233);
 }
 
 h1 {
     font-family: 'Alice', sans-serif;
 }
 
+/* Dark Mode H1 */
+.dark h1 {
+    color: #fff;
+}
+
 .box {
+    position: relative;
     background: #e8cc96;
     padding: 16px;
     border-radius: 15px;
@@ -30,6 +46,12 @@ h1 {
     height: 300px;
     box-sizing: border-box;
     text-align: center;
+}
+
+/* Dark Mode Box */
+.dark .box {
+    background: #333;
+    box-shadow: 0 4px 12px rgba(205, 202, 202, 0.705);
 }
 
 input[type="date"] {
@@ -52,55 +74,55 @@ input[type="date"] {
     padding: 8px;
 }
 
-.darkmode {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  text-decoration: none;
-  margin-left: 25px;
+/* Dark Mode Result */
+.dark .result {
+    background: #fff;
+    color: #202121;
+}
+
+/* Dark Mode Brightness */
+.dark .switchmode {
+    color: #fff;
+}
+
+.switchmode {
+  margin-left: 35px;
+  border: none;
+  background-color: transparent;
   font-size: 25px;
-  color: #202121;
-  font-weight: 300;
-  display: inline-block;
+  cursor: pointer;
   transition: transform 0.5s ease, color 0.5s ease;
 }
 
-.darkmode:hover {
+.switchmode:hover {
   transform: scale(1.1);   
   cursor: pointer;   
-  text-shadow: 0 0 20px rgba(245, 73, 73, 0.705);  
+}
+
+hr {
+    border: 1px solid rgb(69, 68, 68); 
+    margin-left: 30px; 
+    margin-right: 29px;
+}
+
+.dark hr {
+    border-color: #c1bdbd;
 }
 </style>
 
 </head>
 <body>
-    <h1>MAO NI</h1>
     <div class="box">
-        <h1>AGE CALCULATOR <a href="ageCalcu_dark.html" class="darkmode">Dark</a></h1> 
-        <hr style="border: 1px solid rgb(42, 42, 42); margin-left: 30px; margin-right: 29px;"><br><br>
+        <h1>AGE CALCULATOR
+        <button id="themeToggle" class="switchmode">
+        <i id="themeIcon" class="bi bi-moon-fill"></i></button></h1>
+
+        <hr><br><br>
+
         <input type="date" id="dob" onchange="calculateAge()"/>
         <div class="result" id="result">Select your birthdate</div>
     </div>
 
-<script>
-function calculateAge() {
-    const dob = new Date(document.getElementById("dob").value);
-    if (isNaN(dob))return;
-    const now = new Date();
-    let years = now.getFullYear() - dob.getFullYear();
-    let months = now.getMonth() - dob.getMonth();
-    let days = now.getDate()- dob.getDate();
-    if (days < 0) {
-        months--;
-        days += new Date(now.getFullYear(), now.getMonth(), 0).getDate();
-    }
-
-    if (months < 0) {
-        years--;
-        months += 12;
-    }
-
-    document.getElementById("result").textContent = `You are ${years} years, ${months} months, and ${days} days old`;
-}
-</script>
-
+    <script src="calculateAge.js"></script>
 </body>
 </html>
